; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-snap.c___check_for_conflicting_io.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-snap.c___check_for_conflicting_io.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_snapshot = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dm_snapshot*, i32)* @__check_for_conflicting_io to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__check_for_conflicting_io(%struct.dm_snapshot* %0, i32 %1) #0 {
  %3 = alloca %struct.dm_snapshot*, align 8
  %4 = alloca i32, align 4
  store %struct.dm_snapshot* %0, %struct.dm_snapshot** %3, align 8
  store i32 %1, i32* %4, align 4
  br label %5

5:                                                ; preds = %10, %2
  %6 = load %struct.dm_snapshot*, %struct.dm_snapshot** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i64 @__chunk_is_tracked(%struct.dm_snapshot* %6, i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %5
  %11 = call i32 @msleep(i32 1)
  br label %5

12:                                               ; preds = %5
  ret void
}

declare dso_local i64 @__chunk_is_tracked(%struct.dm_snapshot*, i32) #1

declare dso_local i32 @msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
